--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
+    <button id="grid-number">Set grid size</button>
     <div id="container"></div>
     <script src="script.js"></script>
 </body>
